syntax = "proto3";

package pb;

option go_package = "ohdada/g2gserver/internal/pkg/pb";

enum StoreDriver {
  SD_NONE = 0;
  SD_ORM = 1;
}

message StoreConnection {
  StoreDriver driver = 1;
  string host = 2;
  int64 port = 3;
  string user = 4;
  string password = 5;
  string schema = 6;
  string schema_game = 7;
  int64 max_connection = 8;
}